@@ -1,0 +1,12 @@
+#!/usr/bin/env python
+
+import sys, os
+from os import path
+thisfile = path.abspath(__file__)
+while path.islink(thisfile):
+    thisfile = path.join(path.dirname(thisfile), os.readlink(thisfile))
+sys.path.insert(0, path.normpath(path.dirname(thisfile) + '/../lib'))
+
+from nicos.daemon.textclient import main
+
+sys.exit(main(sys.argv))
