@@ -3,6 +3,11 @@ Changelog for NICOS 2
 
 **Release 2.2.0**
 
+  - Added back text-based client for the daemon.
+
+  - Changed cache store file format to retain info if the key will expire.
+    This fixes cache startup behavior even after unclean shutdowns.
+
   - Added HTML version of NICOS monitor.
 
   - Added basic mathematical functions and constants in the default namespace.
